--- a/htaccess.info.yml
+++ b/htaccess.info.yml
@@ -1,5 +1,6 @@
 name: Htaccess
 description: 'Generate htaccess accordings your settings.'
+version: 1.4
 core: 8.x
 package: Administration
 type: module
